--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -161,7 +161,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body vh-100">
+      <div class="modal-body vh-100" style="overflow: hidden auto;">
         <div class="row">
           <div class="col-md-4">
             <div id="studentsPanel">
@@ -204,6 +204,27 @@
     </td></tr>
   </table>
 
+  {{#ifCond final_quiz.score '>=' 0}}
+    <div class="accordion mb-2" id="accordionExample" data-id="{{final_quiz.quiz}}">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0">
+            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              View Quiz Details
+            </button>
+          </h2>
+        </div>
+
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div class="card-body">
+          </div>
+        </div>
+      </div>
+
+  </div>
+  {{/ifCond}}
+
   <table class="table table-bordered">
    <thead>
     <tr><th>Status</th><th>Action</th><th>Date</th></tr>
@@ -234,16 +255,42 @@
           {{{dateFormat}}}
           </td></tr>
        </tbody>
-    </table>
+  </table>
             
+</script>
+{% endverbatim %}
+
+
+{% verbatim %}
+<script type="text/x-handlebars-template" id='quizDetailTemplate'>
+  <p>{{name}}</p>
+
+  <ul class="list-group">
+    {{#each questions}}
+    <li class="list-group-item">
+    <p>{{text}}</p>
+    
+      <ul class="answers">
+        {{#each answers}}
+        <li class="p-2" data-id="{{id}}">{{text}}
+        {{#if is_correct}}<span class="badge badge-success">(Correct)</span>{{/if}}
+        </li>
+        {{/each}}
+      </ul>
+
+    </li>
+
+    {{/each}}
+  </ul>
 </script>
 {% endverbatim %}
 
 {% endblock %}
 
 
-{% block scripts %}
 
+
+{% block scripts %}
 
 <script>
   Handlebars.registerHelper('ifEquals', function (arg1, arg2, options) {
@@ -367,6 +414,27 @@
 
       };
 
+      var getQuizDetails = function (id) {
+        $.get('/api/quiz-details/?format=json', {
+          id: id
+        }, function (response) {
+
+          var source = document.getElementById("quizDetailTemplate").innerHTML;
+          var template = Handlebars.compile(source);
+          $("#accordionExample .card-body").html(template(response));
+
+          var userId = $("a.link-student-enrolled.active").attr('id');
+
+          var student = studentsList.find(a => a.id == userId);
+
+          $(student.quiz_answers).each(function (ix, item) {
+
+            $(".answers li[data-id='" + item.answer + "']").append('<span class="badge badge-primary">Answered</span>');
+          });
+
+        });
+      };
+
       var registerEvent = function () {
 
         $("div").on("click", ".link-students", function (e) {
@@ -415,6 +483,15 @@
           var template = Handlebars.compile(source);
           $("#studentProgressPanel").html(template(courseTaken));
 
+          $('#accordionExample').on('shown.bs.collapse', function () {
+            $("#accordionExample .card-body").empty();
+
+            var id = $("#accordionExample").attr('data-id');
+
+            getQuizDetails(id);
+
+          });
+
         });
 
         $("div").on("click", "#btnMarkCompleteCourse", function (e) {
@@ -455,6 +532,8 @@
           });
 
         });
+
+
 
       };
 
