--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -174,6 +174,10 @@
                                 Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC
                             </a>
                         </p>
+
+                        <div class="mt-4">
+                        <img src='{% static "/images/iacet.jpg" %}' width="300" />
+                        </div>
                     </div>
                 </div>
             </div>
