--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -10,7 +10,7 @@
         <div class="row h-100 align-items-center">
             <div class="col-12">
                 <div class="hero-content text-center">
-                    <h2>NYC SST COURSES</h2>
+                    <h2>NYC Test COURSES</h2>
                     <a href="{% url 'courses_list' %}" class="btn clever-btn">Browse Courses</a>
                 </div>
             </div>
