--- a/app_public/templates/sst/verify.html
+++ b/app_public/templates/sst/verify.html
@@ -12,7 +12,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">SST Card Verification</li>
+            <li class="breadcrumb-item active" aria-current="page"> Card Verification</li>
         </ol>
     </nav>
 </div>
@@ -24,15 +24,11 @@
             <div class="col-12">
                 <div class="page-content">
 
-                    <h3> SST Card Verification </h3>
+                    <h3>  Card Verification </h3>
 
                     <p>
-
-                        Before issuing an SST Card, NYCCST verifies all training hours completed to ensure that a
-                        Worker or Supervisor meets the requirements set forth under Local Law 196 and the New York
-                        City Department of Buildings’ Site Safety Training Curriculum. If you’ve been presented with
-                        an SST Card issued by NYCCST Academy, we can help verify the validity of the card.
-
+                         Test
+                       
                     </p>
 
 
