--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -34,7 +34,7 @@
             <!-- Contact Info -->
             <div class="contact-info">
                 <a href="#"><span>Phone:</span> 914-473-6791</a>
-                <a href="#"><span>Email:</span> info@educa.com</a>
+                <a href="#"><span>Email:</span> nyccst@construction-safety-nyc.com</a>
             </div>
 
             {% if request.user.is_authenticated  %}
