--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -32,7 +32,7 @@
 <body class="bg-light">
 
   <nav id="top-nav" class="navbar navbar-expand-md navbar-bark bg-dark">
-    <a class="navbar-brand mb-0 h1 text-white" href="{%url 'student_course_list'%}">EDUCA</a>
+    <a class="navbar-brand mb-0 h1 text-white" href="{%url 'student_course_list'%}">NYCCST</a>
     <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarCollapse"
       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fa fa-bullseye"></i>
