--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -64,7 +64,7 @@
                                     </li>
                                     <li>
                                         <h6><i class="fa fa-envelope" aria-hidden="true"></i> Email</h6>
-                                        <h6>   <a href="mailto:Arperalta@Yahoo.com">Arperalta@Yahoo.com</a></h6>
+                                        <h6>   <a href="mailto:arperalta@construction-safety-nyc.com</a></h6>
                                     </li>
                                     <li>
                                         <h6><i class="fa fa-map-pin" aria-hidden="true"></i> Address</h6>
