--- a/courses/templates/app_home.html
+++ b/courses/templates/app_home.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
-{% block title %} {{ block.super }} Home {% endblock %}
+{% block meta_desc %} 1 {% endblock %}
+
+{% block title %} - Home {% endblock %}
 
 {% block bodyclass %}homepage{% endblock %}
 
