--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -6,18 +6,32 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="{% block meta_desc %} Construction site and safety training courses to qualify you to work in the NY. NYC Construction Safety Training offers OSHA 10-Hour, 30-Hour, Supported Scaffold, Site Safety Manager, Concrete Safety, CHST, ASP, CSP, SMS and STSC training online for construction and general industry. We provide bulk discounts. {% endblock %}">
+    <meta name="description"
+        content="{% block meta_desc %} Construction site and safety training courses to qualify you to work in the NY. NYC Construction Safety Training offers OSHA 10-Hour, 30-Hour, Supported Scaffold, Site Safety Manager, Concrete Safety, CHST, ASP, CSP, SMS and STSC training online for construction and general industry. We provide bulk discounts. {% endblock %}">
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="robots" content="all">
-
     <title> Online - NYC CONSTRUCTION SAFETY TRAINING {% block title %} {% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static '/images/logo5.png' %}">
     <link href="{% static '/css/base.css' %}" rel="stylesheet">
     <link href="{% static '/css/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}">
     <link rel="canonical" href="https://construction-safety-nyc.com{{ request.path }}" />
-        
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1"></script>
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-190250545-1');
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBMW2QHSJ4"></script>
     <script>
@@ -30,13 +44,11 @@
 
         gtag('config', 'G-HBMW2QHSJ4');
     </script>
-
 </head>
 
 <body>
     <!-- ##### Header Area Start ##### -->
     <header class="header-area">
-
         <!-- Top Header Area -->
         <div class="top-header-area d-flex justify-content-between align-items-center">
             <!-- Contact Info -->
@@ -44,67 +56,48 @@
                 <a href="#"><span>Phone:</span> 914-473-6791</a>
                 <a href="#"><span>Email:</span> nyccst@construction-safety-nyc.com</a>
             </div>
-
             {% if request.user.is_authenticated  %}
-
             <div class="follow-us">
-
                 {% if request.user.is_teacher == True %}
                 <a href="{% url 'teacher_dashboard' %}">Teacher Dashboard</a>
                 {% endif %}
-
                 {% if request.user.is_student == True %}
                 <a href="{% url  'student_course_list' %}">Student Dashboard</a>
                 {% endif %}
-
                 {% if request.user.is_superuser == True %}
                 <a href="{% url  'admin_dashboard' %}">Dashboard</a>
                 {% endif %}
-
             </div>
-
             {% else %}
-
             <div class="follow-us">
-
                 <a href="{% url 'login' %}">Sign in</a>
                 <a href="{% url 'student_registration' %}">Register</a>
-
             </div>
-
             {% endif %}
         </div>
-
         <!-- Navbar Area -->
         <div class="clever-main-menu">
             <div class="classy-nav-container breakpoint-off">
                 <!-- Menu -->
                 <nav class="classy-navbar justify-content-between" id="cleverNav">
-
                     <!-- Logo -->
                     <a class="nav-brand" href="/">
-
                         <img src="{% static '/images/logo5.png' %}" title="NYC CONSTRUCTION SAFETY TRAINING"
                             style="height: 62px;" alt="logo">
                         CONSTRUCTION SAFETY TRAINING
                     </a>
-
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
                         <span class="navbarToggler"><span></span><span></span><span></span></span>
                     </div>
-
                     <!-- Menu -->
                     <div class="classy-menu">
-
                         <!-- Close Button -->
                         <div class="classycloseIcon">
                             <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                         </div>
-
                         <!-- Nav Start -->
                         <div class="classynav">
-
                             <ul>
                                 <li><a href="/">Home</a></li>
                                 <li class="cn-dropdown-item has-down courses-menu">
@@ -113,12 +106,10 @@
                                         <li><a href="{% url 'courses_list' %}">All Courses</a></li>
                                     </ul>
                                 </li>
-
                                 <li><a href="{% url 'about_detail' %}">About Us</a></li>
                                 <li><a href="{% url 'contact_detail' %}">Contact Us</a></li>
                                 <li><a href="{% url 'sst_verify' %}">Test CARD Verification </a></li>
                             </ul>
-
                             <!-- Search Button -->
                             <div class=" search-area d-none">
                                 <form action="{% url 'courses_list' %}" method="get">
@@ -126,9 +117,7 @@
                                     <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                                 </form>
                             </div>
-
                             {% if request.user.is_authenticated %}
-
                             <div class="login-state d-flex align-items-center ">
                                 <div class="user-name">
                                     <div class="dropdown">
@@ -136,13 +125,11 @@
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             {{ request.user }}</a>
                                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userName">
-
                                             <a class="dropdown-item" href="{% url 'logout' %}">Sign out</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                             {% else %}
                             <div class="register-login-area d-none">
                                 <!-- <a href="#" class="btn">Register</a> -->
@@ -151,7 +138,6 @@
                                     href="{% url 'student_registration' %}" class="btn">Register</a>
                             </div>
                             {% endif %}
-
                             <!-- Register / Login -->
                         </div>
                         <!-- Nav End -->
@@ -159,60 +145,44 @@
                 </nav>
             </div>
         </div>
-
-
-
     </header>
     <!-- ##### Header Area End ##### -->
-
     <div id="content">
         {% block content %}
         {% endblock %}
     </div>
-
     <footer class="footer-area">
-
         <div class="top-footer-area">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-
-
                         <p><a href="#">
                                 Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC
                             </a>
                         </p>
-
                         <div class="mt-4">
-                        <img src='{% static "/images/iacet.jpg" %}' width="300" alt="iacet" />
+                            <img src='{% static "/images/iacet.jpg" %}' width="300" alt="iacet" />
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="bottom-footer-area d-flex justify-content-between align-items-center">
-
             <div class="contact-info">
                 <a href="#">Support</a>
                 <a href="{% url 'legal_detail' %}">Legal</a>
                 <a href="{% url 'student_manual_detail' %}">Student Manual</a>
-                      <a href="{% url 'faq' %}">FAQ</a>
+                <a href="{% url 'faq' %}">FAQ</a>
                 <a href="#">Sitemap</a>
             </div>
-
             <div class="follow-us">
                 <span>Follow us</span>
                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
-
         </div>
-
-
     </footer>
-
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
@@ -231,8 +201,6 @@
             </div>
         </div>
     </div>
-
-
     <script src="{% static "/plugins/jquery/jquery.min.js" %}"></script>
     <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
     <script src="{% static "/plugins/bootstrap/js/bootstrap.min.js" %}"></script>
@@ -241,12 +209,9 @@
     <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
     <script src="{% static "/plugins/jquery.form.min.js" %}"></script>
     <script src="{% static "/plugins/handlebars.min.js" %}"></script>
-
     <script src="//media.twiliocdn.com/sdk/js/video/releases/2.4.0/twilio-video.min.js"></script>
-
     {% block scripts %}
     {% endblock %}
-
     <script>
         $(document).ready(function () {
             getSubjects();
