--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -19,10 +19,13 @@
     <link href="{% static '/css/style.css' %}" rel="preload" as="style" onload="this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="{% static '/css/style.css' %}"></noscript>
-        
+
+    <link href="{% static "'/plugins/toastr/toastr.min.css' %}" rel="preload" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="{% static '/plugins/toastr/toastr.min.css' %}"></noscript>
     <!-- <link href="{% static '/css/base.css' %}" rel="stylesheet"> -->
     <!-- <link href="{% static '/css/style.css' %}" rel="stylesheet"> -->
-    <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}">
+    <!-- <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}"> -->
     <link rel="canonical" href="https://construction-safety-nyc.com{{ request.path }}" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1"></script>
