--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -20,9 +20,10 @@
     <noscript>
         <link rel="stylesheet" href="{% static '/css/style.css' %}"></noscript>
 
-    <link href="{% static "'/plugins/toastr/toastr.min.css' %}" rel="preload" as="style" onload="this.rel='stylesheet'">
+    <link href="{% static '/plugins/toastr/toastr.min.css' %}" rel="preload" as="style" onload="this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="{% static '/plugins/toastr/toastr.min.css' %}"></noscript>
+
     <!-- <link href="{% static '/css/base.css' %}" rel="stylesheet"> -->
     <!-- <link href="{% static '/css/style.css' %}" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}"> -->
