--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -13,12 +13,7 @@
     <meta name="robots" content="all">
     <title> Online - NYC CONSTRUCTION SAFETY TRAINING {% block title %} {% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static '/images/logo5.png' %}">
-    <link href="{% static '/css/base.css' %}" rel="preload" as="style" onload="this.rel='stylesheet'">
-    <noscript>
-        <link rel="stylesheet" href="{% static '/css/base.css' %}"></noscript>
-  
-
-    <!-- <link href="{% static '/css/base.css' %}" rel="stylesheet"> -->
+    <link href="{% static '/css/base.css' %}" rel="stylesheet">
     <link href="{% static '/css/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}">
     <link rel="canonical" href="https://construction-safety-nyc.com{{ request.path }}" />
@@ -678,7 +673,6 @@
             </div>
         </div>
     </div>
-    
     <script src="{% static "/plugins/jquery/jquery.min.js" %}"></script>
     <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
     <script src="{% static "/plugins/bootstrap/js/bootstrap.min.js" %}"></script>
