--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -5,12 +5,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,500,600,700");
 /* :: 2.0 Import All CSS */
 
-@import url(bootstrap.min.css);
+/* @import url(bootstrap.min.css);
 @import url(owl.carousel.min.css);
 @import url(animate.css);
 @import url(magnific-popup.css);
 @import url(font-awesome.min.css);
-@import url(classy-nav.min.css);
+@import url(classy-nav.min.css); */
 /* :: 3.0 Base CSS */
 
 * {
