--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -14,9 +14,16 @@
     <title> Online - NYC CONSTRUCTION SAFETY TRAINING {% block title %} {% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static '/images/logo5.png' %}">
     <link href="{% static '/css/base.css' %}" rel="stylesheet" media="print" onload="this.media='all'; this.onload=null;">
+   
+    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet"  media="print" onload="this.media='all'; this.onload=null;">
+    <link href="{% static '/css/font-awesome.min.css' %}" rel="stylesheet"  media="print" onload="this.media='all'; this.onload=null;">
+    <link href="{% static '/css/classy-nav.min.css' %}" rel="stylesheet"  media="print" onload="this.media='all'; this.onload=null;">
     <link href="{% static '/css/style.css' %}" rel="stylesheet"  media="print" onload="this.media='all'; this.onload=null;">
+    
     <link rel="stylesheet" href="{% static '/plugins/toastr/toastr.min.css' %}"  media="print" onload="this.media='all'; this.onload=null;">
+    
     <link rel="canonical" href="https://construction-safety-nyc.com{{ request.path }}" />
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1"></script>
     <script>
