--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -1,29 +1,36 @@
 {% extends "teacher_base.html" %}
-
 {% block title %}My courses{% endblock %}
-
 {% block content %}
-
 <div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
   <h1 class="h3 mb-0 text-gray-800">My Courses</h1>
   <a href="{% url "course_create" %}" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
       class="fas fa-add"></i> Create New Course</a>
 </div>
-
 <div class="row">
   {% for course in object_list %}
   <div class="col-md-4">
     <div class="card border-0 shadow mb-3">
       <div class="card-body">
         <h5 class="card-title" pk="{{course.id}}">{{ course.title }}</h5>
-
-        <h6 class="card-subtitle small text-muted mt-1">
-          Date: {{course.created|date:"M d, Y" }}
-        </h6>
-
+        <div class="d-flex flex-row">
+          <div>
+            <h6 class="card-subtitle small text-muted mt-1 mb-2">
+              Date: {{course.created|date:"M d, Y" }}
+            </h6>
+          </div>
+          <div>
+            <strong class="ml-3"> Price: </strong>
+            {% if course.is_free %} <span class="badge badge-warning">Free</span>
+            {%elif course.discounted_price > 0%}
+            <span class="badge badge-warning"><s>{{course.price}}</s></span>
+            <span class="badge badge-success">{{course.discounted_price}}</span>
+             {%elif course.price > 0%}
+            <span class="badge badge-warning">{{course.price}}</span>
+            {%endif%}
+          </div>
+        </div>
         <div class="mt-3 d-flex flex-row">
           <a class="badge badge-info px-3 py-1" href="{% url "course_edit" course.id %}">Edit Basic</a>
-
           <a class="badge badge-info px-3 py-1 ml-1" href="{% url "course_module_update" course.id %}">Manage
             Modules</a>
           {% if course.modules.count > 0 %}
@@ -31,42 +38,34 @@
             href="{% url "module_content_list" course.modules.first.id %}">Manage Contents</a>
           {% endif %}
         </div>
-
         <div class="mt-3 d-flex flex-row">
           <a class="badge badge-info px-3 py-1 link-features" href="javascript:void(0);" pk="{{course.id}}">
             Manage Features
           </a>
           <a class="badge badge-info px-3 py-1 mx-1" href="{% url "quiz_course" course.id %}">Final Quiz</a>
-
           {% if course.quiz %}
           <a class="badge badge-info px-3 py-1 mx-1 link-quiz-summary" data-quiz="{{course.quiz.id}}"
             href="javascript:void(0);">Quiz Summary</a>
           {%endif%}
-
         </div>
-
         <div class="mt-3 d-flex flex-row">
-          <a class="badge badge-primary px-3 py-1 link-copy" href="javascript:void(0);" pk="{{course.id}}">Make
+          <a class="badge badge-warning px-3 py-1 link-price" href="javascript:void(0);" pk="{{course.id}}">Set
+            Price</a>
+          <a class="badge badge-primary px-3 py-1 mx-1 link-copy" href="javascript:void(0);" pk="{{course.id}}">Make
             Copy</a>
-          <a class="badge badge-danger px-3 py-1 " href="{% url "course_delete" course.id %}">Delete Course</a>
+          <a class="badge badge-danger px-3 py-1 mx-1 " href="{% url "course_delete" course.id %}">Delete Course</a>
         </div>
       </div>
-
-
-
       <div class="card-footer text-center">
         <a href="javascript:;" class="btn btn-sm btn-success link-students" pk="{{course.id}}">Students</a>
         <a href="{% url 'teacher_course_detail' course.id %}" class="btn btn-sm btn-success">Take Course</a>
       </div>
-
     </div>
   </div>
   {% empty %}
   <p>You haven't created any courses yet.</p>
   {% endfor %}
-
 </div>
-
 <div id="copyModal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -78,16 +77,12 @@
       </div>
       <div class="modal-body">
         <form method="post" action="{% url 'course_copy' %}">
-
           {% csrf_token %}
-
           <input type="hidden" class="form-control" id="id" name="id" value="" />
-
           <div class="form-group">
             <label for="exampleInputEmail1">Course Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Course Name..">
           </div>
-
         </form>
       </div>
       <div class="modal-footer">
@@ -97,7 +92,6 @@
     </div>
   </div>
 </div>
-
 <div id="featureEditorModal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
@@ -108,13 +102,9 @@
         </button>
       </div>
       <div class="modal-body">
-
         <form method="post" action="/api/course-features/" id="fmFeature">
-
           {% csrf_token %}
-
           <input type="hidden" class="form-control" name="course" value="" />
-
           <div class="row">
             <div class="col-3">
               <div class="list-group" id="list-tab" role="tablist">
@@ -145,9 +135,7 @@
               </div>
             </div>
           </div>
-
         </form>
-
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-success" id="btnSaveFeatures">Save Changes</button>
@@ -156,7 +144,6 @@
     </div>
   </div>
 </div>
-
 <div id="studentsEnrolledModal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
@@ -182,7 +169,6 @@
     </div>
   </div>
 </div>
-
 <div id="finalQuizSummaryModal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
@@ -202,15 +188,59 @@
             </tr>
           </thead>
           <tbody>
-
           </tbody>
         </table>
       </div>
     </div>
   </div>
 </div>
-
-
+<div id="priceModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Price</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="fmPrice">
+          <input type="hidden" name="id">
+          <div class="row mb-3">
+            <div class="col">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="is_free">
+                <label class="form-check-label" for="defaultCheck1">
+                  Free Course
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="form-group">
+                <label for="f1">Price</label>
+                <input type="number" min="0" class="form-control form-control-sm" name="price" readonly>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="form-group">
+                <label for="f1">Discounted Price</label>
+                <input type="number" min="0" class="form-control form-control-sm" name="discounted_price" readonly>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" id="btnSavePrice">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% verbatim %}
 <script type="text/x-handlebars-template" id='studentEnrollItemTemplate'>
   <a href="javascript:;" class="list-group-item list-group-item-action link-student-enrolled" id="{{id}}" item="{{stringify}}">
@@ -218,10 +248,8 @@
   </a>
 </script>
 {% endverbatim %}
-
 {% verbatim %}
 <script type="text/x-handlebars-template" id='studentCourseProgressTemplate'>
-
   <table class="table table-bordered">
     <tr><td>Final Quiz</td><td>
     
@@ -291,8 +319,6 @@
             
 </script>
 {% endverbatim %}
-
-
 {% verbatim %}
 <script type="text/x-handlebars-template" id='quizDetailTemplate'>
   <p>{{name}}</p>
@@ -316,30 +342,20 @@
   </ul>
 </script>
 {% endverbatim %}
-
-
 {% verbatim %}
 <script type="text/x-handlebars-template" id='quizQuestionItemTemplate'>
-
   {{#each questions}}
     <tr>
-    <td>{{text}}</td>
-     <td class="correct">0</td>
+      <td>{{text}}</td>
+      <td class="correct">0</td>
       <td class="wrong">0</td>
-     <tr>
-    {{/each}}
- 
+    <tr>
+  {{/each}}
 </script>
 {% endverbatim %}
-
 {% endblock %}
-
-
-
-
 {% block scripts %}
-
-<script>
+<script type="application/javascript">
   Handlebars.registerHelper('ifEquals', function (arg1, arg2, options) {
     return (arg1 == arg2) ? options.fn(this) : options.inverse(this);
   });
@@ -512,7 +528,6 @@
         });
       };
 
-
       var registerEvent = function () {
 
         $("div").on("click", ".link-students", function (e) {
@@ -642,6 +657,102 @@
 
     };
 
+    $.PriceManager = function (options) {
+
+      var that = this;
+
+      var courseList = JSON.parse('{{object_json|safe}}');
+
+      var settings = $.extend({}, options);
+
+      var updatePrice = function () {
+
+        var formData = $("#fmPrice").serializeObject();
+        formData['is_free'] = $("#fmPrice input[name='is_free']").is(":checked");
+
+        if (!formData.price) formData.price = 0;
+        if (!formData.discounted_price) formData.discounted_price = 0;
+
+        $.ajax({
+          type: "PUT",
+          url: "/api/course-price/" + formData.id + "/",
+          data: JSON.stringify(formData),
+          contentType: "application/json; charset=utf-8",
+          dataType: "json",
+          beforeSend: function (xhr, settings) {
+            xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
+          },
+          success: function (response, textStatus, xhr) {
+            if (response && response.id > 0) {
+              toastr.success('Price has been updated');
+              window.location.reload();
+            }
+          },
+        });
+
+
+      };
+
+      var registerEvent = function () {
+
+        $(".link-price").click(function (event) {
+          event.stopPropagation();
+
+          var id = $(this).attr('pk');
+          var item = courseList.find(a => a.pk == id);
+
+          if (id && item) {
+            $("#priceModal input[name='is_free']").prop('checked', item.fields.is_free);
+            $("#priceModal input[name='id']").val(id);
+
+            if (item.fields.is_free) {
+              $("#priceModal input[name='price']").val(null).attr('readonly', true);
+              $("#priceModal input[name='discounted_price']").val(null).attr('readonly', true);
+            } else {
+              $("#priceModal input[name='price']").val(item.fields.price).attr('readonly', false);
+              $("#priceModal input[name='discounted_price']").val(item.fields.discounted_price).attr(
+                'readonly', false);
+            }
+
+            $("#priceModal").modal('show');
+          }
+
+
+        });
+
+        $("div").on("change", "#priceModal input[name='is_free']", function (e) {
+          e.stopPropagation();
+
+          if ($(this).is(":checked")) {
+            $("#priceModal input[name='price']").val(null).attr('readonly', true);
+            $("#priceModal input[name='discounted_price']").val(null).attr('readonly', true);
+          } else {
+            $("#priceModal input[name='price']").val(null).attr('readonly', false);
+            $("#priceModal input[name='discounted_price']").val(null).attr(
+              'readonly', false);
+          }
+
+        });
+
+        $("div").on("click", "#btnSavePrice", function (e) {
+          e.stopPropagation();
+
+          updatePrice();
+
+        });
+
+      };
+
+      var init = function () {
+        registerEvent();
+      };
+
+      init();
+
+      return this;
+
+    };
+
   }(jQuery));
 
   $(document).ready(function () {
@@ -649,6 +760,7 @@
     initTextEditor();
 
     new $.StudentsEnrolledManager({});
+    new $.PriceManager({});
 
     $(".link-copy").click(function (event) {
       event.stopPropagation();
@@ -810,5 +922,4 @@
 
   };
 </script>
-
 {% endblock %}
