--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -1,6 +1,9 @@
 {% extends "teacher_base.html" %}
 {% block title %}My courses{% endblock %}
 {% block content %}
+
+<input type="text" value="{{object_json}}" id="hfJson">
+
 <div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
   <h1 class="h3 mb-0 text-gray-800">My Courses</h1>
   <a href="{% url "course_create" %}" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
@@ -661,7 +664,7 @@
 
       var that = this;
 
-      var courseList = JSON.parse('{{object_json|safe}}');
+      var courseList = JSON.parse($("#hfJson").val());
 
       var settings = $.extend({}, options);
 
