--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -2,7 +2,7 @@
 {% block title %}My courses{% endblock %}
 {% block content %}
 
-<input type="text" value="{{object_json}}" id="hfJson">
+<input type="hidden" value="{{object_json}}" id="hfJson">
 
 <div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
   <h1 class="h3 mb-0 text-gray-800">My Courses</h1>
